--- a/skuld/frontend/package.json
+++ b/skuld/frontend/package.json
@@ -7,7 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^3.2.0",
+    "luxon": "^3.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
@@ -38,4 +41,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
