--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
-recursive-include skuld/frontend/build *
+recursive-include buffer/frontend/build *
+recursive-include buffer/frontend/public *
 include README.md
 include LICENSE 
